--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo">
-          <img class="page-header-logo" alt="Логотип Город Седона" src="">
+          <img class="page-header-logo" src="img/logo.svg" width="139" height="70" alt="Логотип Город Седона">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -33,12 +33,97 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Хочу сюда!</a>
+            <a class="navigation-link button-link" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
-
     </header>
-
+    <main class="main-index">
+      <h1 class="visually-hidden">Добро пожаловать в город Седона</h1>
+      <section class="promo">
+        <h2 class="visually-hidden">О Седоне</h2>
+        <p>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества Седоны</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3>Настоящий<br>городок</h3>
+            <p>— №1 —</p>
+            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img src="img/photo-1.png" width="800" height="384" alt="Улица в Седоне">
+          </li>
+          <li class="advantages-item">
+            <h3>Жильё</h3>
+            <p>Рекомендуем пожить<br>в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="advantages-item">
+            <h3>Еда</h3>
+            <p>Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="advantages-item">
+            <h3>Сувениры</h3>
+            <p>Не только китайского,<br>но и настоящего местного производства!</p>
+          </li>
+          <li class="advantages-item">
+            <img src="img/photo-2.png" width="800" height="384" alt="Каньон">
+            <h3>Там есть <br>мост дьявола</h3>
+            <p>— №2 —</p>
+            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+          <li class="advantages-item">
+            <h3>Небольшая<br>площадь</h3>
+            <p>— №3 —</p>
+            <p>Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item">
+            <h3>Красивая<br>дорога</h3>
+            <p>— №4 —</p>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3>Мало<br>туристов</h3>
+            <p>— №5 —</p>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ul>
+      </section>
+      <section class="hotel-search">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="search-link button-link" href="=catalog.html">ПОИСК ГОСТИНИЦЫ В седоне</a>
+      </section>
+      <section class="subscription-form">
+        <h2>Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form>
+          <label for="subscription-form-email" class="visually-hidden">Введите Ваш e-mail</label>
+          <input type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
+          <button type="submit">Подписаться</button>
+        </form>
+      </section>
+    </main>
+    <footer>
+      <ul class="social-list">
+        <li class="social-item">
+          <a href="#">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="#">
+            <span class="visually-hidden">Telegram</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="#">
+            <span class="visually-hidden">YouTube</span>
+          </a>
+        </li>
+      </ul>
+      <a href="tel:88128121212">+7 (812) 812-12-12</a>
+      <a href="#">Сайт HTML Academy</a>
+    </footer>
   </body>
 </html>
