<footer>у присвоен класс, размечена часть каталога

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </form>
       </section>
     </main>
-    <footer>
+    <footer class="page-footer">
       <ul class="social-list">
         <li class="social-item">
           <a href="#">
