--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Гостиницы</a>
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
@@ -92,7 +92,7 @@
       <section class="hotel-search">
         <h2>Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="search-link button-link" href="=catalog.html">ПОИСК ГОСТИНИЦЫ В седоне</a>
+        <a class="search-link button-link" href="catalog.html">ПОИСК ГОСТИНИЦЫ В седоне</a>
       </section>
       <section class="subscription-form">
         <h2>Подпишитесь на рассылку</h2>
