--- a/catalog.html
+++ b/catalog.html
@@ -51,67 +51,156 @@
             <a class="breadcrumps-limk">Гостиницы</a>
           </li>
         </ul>
-        <section class="hotel-catalog">
-          <h2 class="visually-hidden">Каталог отелей с фильтрами</h2>
-          <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-            <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-titel">Инфраструктура:</legend>
-              <ul class="catalog-filter-list">
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="checkbox" name="pool" checked>
-                    Бассейн
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="checkbox" name="parking" checked>
-                    Парковка
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="checkbox" name="wifi">
-                    Wi-Fi
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-titel">Тип жилья:</legend>
-              <ul class="catalog-filter-list">
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="checkbox" name="hotel" checked>
-                    Гостиница
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="checkbox" name="motel">
-                    Мотель
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="checkbox" name="apartaments">
-                    Апартаменты
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Стоимость, ₽:</legend>
-              <label for="control-input-price-from" class="visually-hidden">Стоимость от</label>
-              <input type="number" name="price-from" id="control-input-price-from" placeholder="0 от">
-              <label for="control-input-price-to" class="visually-hidden">Стоимость до</label>
-              <input type="number" name="price-to" id="control-input-price-to" placeholder="9000 до">
-            </fieldset>
-            <button class="button" type="submit">Применить</button>
-            <button class="button-reset" type="reset">Сбросить</button>
-          </form>
-        </section>
       </header>
+      <section class="hotel-catalog">
+        <h2 class="visually-hidden">Каталог гостиниц с фильтрами</h2>
+        <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+          <fieldset class="catalog-filter-group">
+            <legend class="catalog-filter-titel">Инфраструктура:</legend>
+            <ul class="catalog-filter-list">
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="pool" checked>
+                  Бассейн
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="parking" checked>
+                  Парковка
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="wifi">
+                  Wi-Fi
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="catalog-filter-group">
+            <legend class="catalog-filter-titel">Тип жилья:</legend>
+            <ul class="catalog-filter-list">
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="hotel" checked>
+                  Гостиница
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="motel">
+                  Мотель
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="apartaments">
+                  Апартаменты
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="catalog-filter-group">
+            <legend class="catalog-filter-title">Стоимость, ₽:</legend>
+            <label for="control-input-price-from" class="visually-hidden">Стоимость от</label>
+            <input type="number" name="price-from" id="control-input-price-from" placeholder="0 от">
+            <label for="control-input-price-to" class="visually-hidden">Стоимость до</label>
+            <input type="number" name="price-to" id="control-input-price-to" placeholder="9000 до">
+          </fieldset>
+          <button class="button" type="submit">Применить</button>
+          <button class="button-reset" type="reset">Сбросить</button>
+        </form>
+        <p class="search-result">Найдено гостиниц: 38</p>
+        <select class="select-control-sort" aria-label="Сортировка">
+          <option value="cheap">Сначала дешёвые</option>
+        </select>
+        <a class="button-view card" href="#">
+          <span class="visually-hidden">Показать карточки</span>
+        </a>
+        <a class="button-view slideshow" href="#">
+          <span class="visually-hidden">Показать слайдшоу</span>
+        </a>
+        <a class="button-view list" href="#">
+          <span class="visually-hidden">Показать список</span>
+        </a>
+        <ul class="hotel-list">
+          <li class="hotel-card">
+            <a class="hotel-card-link">
+              <img class="hotel-card-image" src="img/hotel-1.png" width="300" height="211" alt="Гостиница Amara Resort & Spa">
+              <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+            </a>
+            <p class="hotel-card-type">Гостиница <b class="hotel-card-price">От 4000 ₽</b></p>
+
+            <a class="hotel-card-detail" href="#">подробнее</a>
+            <button class="hotel-card-favorites">в избранное</button>
+            <p class="hotel-card-rating">Рейтинг: 8,5</p>
+          </li>
+          <li class="hotel-card">
+            <a class="hotel-card-link">
+              <img class="hotel-card-image" src="img/hotel-2.png" width="300" height="211" alt="Гостиница Villas at Poco Diablo">
+              <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+            </a>
+            <p class="hotel-card-type">Гостиница <b class="hotel-card-price">От 5000 ₽</b></p>
+            <a class="hotel-card-detail" href="#">подробнее</a>
+            <button class="hotel-card-favorites-add">в избранном</button>
+            <p class="hotel-card-rating">Рейтинг: 9,2</p>
+          </li>
+          <li class="hotel-card">
+            <a class="hotel-card-link">
+              <img class="hotel-card-image" src="img/hotel-3.png" width="300" height="211" alt="Гостиница Desert Quail Inn">
+              <h3 class="hotel-card-title">Desert Quail Inn</h3>
+            </a>
+            <p class="hotel-card-type">Гостиница <b class="hotel-card-price">От 2500 ₽</b></p>
+            <a class="hotel-card-detail" href="#">подробнее</a>
+            <button class="hotel-card-favorites">в избранное</button>
+            <p class="hotel-card-rating">Рейтинг: 6,9</p>
+          </li>
+          <li class="hotel-card">
+            <a class="hotel-card-link">
+              <img class="hotel-card-image" src="img/hotel-4.png" width="300" height="211" alt="Гостиница GreenTree Inn">
+              <h3 class="hotel-card-title">GreenTree Inn</h3>
+            </a>
+            <p class="hotel-card-type">Гостиница <b class="hotel-card-price">От 1500 ₽</b></p>
+            <a class="hotel-card-detail" href="#">подробнее</a>
+            <button class="hotel-card-favorites">в избранное</button>
+            <p class="hotel-card-rating">Рейтинг: 5,0</p>
+          </li>
+        </ul>
+        <ul class="pagination">
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">4</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link">...</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">10</a>
+          </li>
+        </ul>
+        <label for="control-amount-card">Гостиниц на странице:</label>
+        <select id="control-amount-card" aria-label="Количество карточек на странице">
+          <option value="4">4</option>
+        </select>
+      </section>
+      <section class="subscription-form">
+        <h2>Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form>
+          <label for="subscription-form-email" class="visually-hidden">Введите Ваш e-mail</label>
+          <input type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
+          <button type="submit">Подписаться</button>
+        </form>
+      </section>
     </main>
     <footer class="page-footer">
       <ul class="social-list">
