--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" src="img/logo.svg" width="139" height="70" alt="Логотип Город Седона">
+          <img class="page-header-logo" src="#" alt="Логотип Город Седона">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -31,6 +31,7 @@
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
             </a>
+            <span class="favorites-amount">12</span>
           </li>
           <li class="navigation-item">
             <a class="navigation-link button-link" href="#">Хочу сюда!</a>
@@ -107,6 +108,10 @@
             <input type="number" name="price-from" id="control-input-price-from" placeholder="0 от">
             <label for="control-input-price-to" class="visually-hidden">Стоимость до</label>
             <input type="number" name="price-to" id="control-input-price-to" placeholder="9000 до">
+            <p class="slider">
+            <span class="slider-price-from visually-hidden">Cтоимость от</span>
+            <span class="slider-price-to visually-hidden">Cтоимость до</span>
+            </p>
           </fieldset>
           <button class="button" type="submit">Применить</button>
           <button class="button-reset" type="reset">Сбросить</button>
@@ -127,43 +132,64 @@
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link">
-              <img class="hotel-card-image" src="img/hotel-1.png" width="300" height="211" alt="Гостиница Amara Resort & Spa">
+              <img class="hotel-card-image" src="#" alt="Гостиница Amara Resort & Spa">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
             <p class="hotel-card-type">Гостиница <b class="hotel-card-price">От 4000 ₽</b></p>
 
             <a class="hotel-card-detail" href="#">подробнее</a>
             <button class="hotel-card-favorites">в избранное</button>
+            <p class="hotel-rating-stars">
+              <span class="star">*</span>
+              <span class="star">*</span>
+              <span class="star">*</span>
+              <span class="star">*</span>
+            </p>
             <p class="hotel-card-rating">Рейтинг: 8,5</p>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link">
-              <img class="hotel-card-image" src="img/hotel-2.png" width="300" height="211" alt="Гостиница Villas at Poco Diablo">
+              <img class="hotel-card-image" src="#" alt="Гостиница Villas at Poco Diablo">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
             <p class="hotel-card-type">Гостиница <b class="hotel-card-price">От 5000 ₽</b></p>
             <a class="hotel-card-detail" href="#">подробнее</a>
             <button class="hotel-card-favorites-add">в избранном</button>
+            <p class="hotel-rating-stars">
+              <span class="star">*</span>
+              <span class="star">*</span>
+              <span class="star">*</span>
+              <span class="star">*</span>
+            </p>
             <p class="hotel-card-rating">Рейтинг: 9,2</p>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link">
-              <img class="hotel-card-image" src="img/hotel-3.png" width="300" height="211" alt="Гостиница Desert Quail Inn">
+              <img class="hotel-card-image" src="#" alt="Гостиница Desert Quail Inn">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
             <p class="hotel-card-type">Гостиница <b class="hotel-card-price">От 2500 ₽</b></p>
             <a class="hotel-card-detail" href="#">подробнее</a>
             <button class="hotel-card-favorites">в избранное</button>
+            <p class="hotel-rating-stars">
+              <span class="star">*</span>
+              <span class="star">*</span>
+              <span class="star">*</span>
+            </p>
             <p class="hotel-card-rating">Рейтинг: 6,9</p>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link">
-              <img class="hotel-card-image" src="img/hotel-4.png" width="300" height="211" alt="Гостиница GreenTree Inn">
+              <img class="hotel-card-image" src="#" alt="Гостиница GreenTree Inn">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
             <p class="hotel-card-type">Гостиница <b class="hotel-card-price">От 1500 ₽</b></p>
             <a class="hotel-card-detail" href="#">подробнее</a>
             <button class="hotel-card-favorites">в избранное</button>
+            <p class="hotel-rating-stars">
+              <span class="star">*</span>
+              <span class="star">*</span>
+            </p>
             <p class="hotel-card-rating">Рейтинг: 5,0</p>
           </li>
         </ul>
