--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo">
-          <img class="page-header-logo" src="img/logo.svg" width="139" height="70" alt="Логотип Город Седона">
+          <img class="page-header-logo" src="#" alt="Логотип Город Седона">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -31,6 +31,7 @@
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
             </a>
+            <span class="favorites-amount">12</span>
           </li>
           <li class="navigation-item">
             <a class="navigation-link button-link" href="#">Хочу сюда!</a>
@@ -42,52 +43,55 @@
       <h1 class="visually-hidden">Добро пожаловать в город Седона</h1>
       <section class="promo">
         <h2 class="visually-hidden">О Седоне</h2>
+        <img src="#" alt="Welcome to the gorgeous Sedona">
         <p>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
-        <ul class="advantages-list">
-          <li class="advantages-item">
+        <ol class="advantages-main-list">
+          <li class="advantages-main-item">
             <h3>Настоящий<br>городок</h3>
             <p>— №1 —</p>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="img/photo-1.png" width="800" height="384" alt="Улица в Седоне">
+            <img src="#" alt="Улица в Седоне">
+              <ul class="advantages-sub-list">
+                <li class="advantages-sub-item">
+                  <h3>Жильё</h3>
+                  <p>Рекомендуем пожить<br>в настоящем мотеле, всё как в кино!</p>
+                </li>
+                <li class="advantages-sub-item">
+                  <h3>Еда</h3>
+                  <p>Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
+                </li>
+                <li class="advantages-sub-item">
+                  <h3>Сувениры</h3>
+                  <p>Не только китайского,<br>но и настоящего местного производства!</p>
+                </li>
+              </ul>
           </li>
-          <li class="advantages-item">
-            <h3>Жильё</h3>
-            <p>Рекомендуем пожить<br>в настоящем мотеле, всё как в кино!</p>
-          </li>
-          <li class="advantages-item">
-            <h3>Еда</h3>
-            <p>Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="advantages-item">
-            <h3>Сувениры</h3>
-            <p>Не только китайского,<br>но и настоящего местного производства!</p>
-          </li>
-          <li class="advantages-item">
-            <img src="img/photo-2.png" width="800" height="384" alt="Каньон">
+          <li class="advantages-main-item">
+            <img src="#" alt="Каньон в Седоне">
             <h3>Там есть <br>мост дьявола</h3>
             <p>— №2 —</p>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-main-item">
             <h3>Небольшая<br>площадь</h3>
             <p>— №3 —</p>
             <p>Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-main-item">
             <h3>Красивая<br>дорога</h3>
             <p>— №4 —</p>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-main-item">
             <h3>Мало<br>туристов</h3>
             <p>— №5 —</p>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-        </ul>
+        </ol>
       </section>
       <section class="hotel-search">
         <h2>Заинтересовались?</h2>
