Формам добавлены атрибуты, социальным сетям классы

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <section class="subscription-form">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form>
+        <form action="https://echo.htmlacademy.ru/" method="get">
           <label for="subscription-form-email" class="visually-hidden">Введите Ваш e-mail</label>
           <input type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
           <button type="submit">Подписаться</button>
