--- a/catalog.html
+++ b/catalog.html
@@ -221,7 +221,7 @@
       <section class="subscription-form">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form>
+        <form action="https://echo.htmlacademy.ru/" method="get">
           <label for="subscription-form-email" class="visually-hidden">Введите Ваш e-mail</label>
           <input type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
           <button type="submit">Подписаться</button>
@@ -232,17 +232,17 @@
       <ul class="social-list">
         <li class="social-item">
           <a href="#">
-            <span class="visually-hidden">Вконтакте</span>
+            <span class="visually-hidden vkontakte">Вконтакте</span>
           </a>
         </li>
         <li class="social-item">
           <a href="#">
-            <span class="visually-hidden">Telegram</span>
+            <span class="visually-hidden telegram">Telegram</span>
           </a>
         </li>
         <li class="social-item">
           <a href="#">
-            <span class="visually-hidden">YouTube</span>
+            <span class="visually-hidden youtube">YouTube</span>
           </a>
         </li>
       </ul>
