Поправлены хлебные крошки

--- a/catalog.html
+++ b/catalog.html
@@ -42,7 +42,7 @@
     <main class="main-inner">
       <header class="main-inner-header">
         <h1 class="inner-header-title">Гостиницы Седоны</h1>
-        <ul class="breadcrumps">
+        <ol class="breadcrumps">
           <li class="braedcrumps-item">
             <a class="breadcrumps-limk" href="index.html">
               <span class="visually-hidden">Главная</span>
@@ -51,7 +51,7 @@
           <li class="braedcrumps-item">
             <a class="breadcrumps-limk">Гостиницы</a>
           </li>
-        </ul>
+        </ol>
       </header>
       <section class="hotel-catalog">
         <h2 class="visually-hidden">Каталог гостиниц с фильтрами</h2>
