--- a/catalog.html
+++ b/catalog.html
@@ -32,6 +32,7 @@
               <span class="visually-hidden">Избранное</span>
             </a>
             <span class="favorites-amount">12</span>
+            <span class="visually-hidden">гостиниц в избранном</span>
           </li>
           <li class="navigation-item">
             <a class="navigation-link button-link" href="#">Хочу сюда!</a>
@@ -84,19 +85,19 @@
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-input" type="checkbox" name="hotel" checked>
+                  <input class="control-input" type="radio" name="hotel-type" value="hotel" checked>
                   Гостиница
                 </label>
               </li>
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-input" type="checkbox" name="motel">
+                  <input class="control-input" type="radio" name="hotel-type" value="motel">
                   Мотель
                 </label>
               </li>
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-input" type="checkbox" name="apartaments">
+                  <input class="control-input" type="radio" name="hotel-type" value="apartments">
                   Апартаменты
                 </label>
               </li>
@@ -120,31 +121,36 @@
         <select class="select-control-sort" aria-label="Сортировка">
           <option value="cheap">Сначала дешёвые</option>
         </select>
-        <a class="button-view card" href="#">
-          <span class="visually-hidden">Показать карточки</span>
-        </a>
-        <a class="button-view slideshow" href="#">
-          <span class="visually-hidden">Показать слайдшоу</span>
-        </a>
-        <a class="button-view list" href="#">
-          <span class="visually-hidden">Показать список</span>
-        </a>
+        <ul class="view-control-list">
+          <li class="view-control-item">
+            <a class="button-view card" href="#">
+              <span class="visually-hidden">Показать карточки</span>
+            </a>
+          </li>
+          <li class="view-control-item">
+            <a class="button-view slideshow" href="#">
+              <span class="visually-hidden">Показать слайдшоу</span>
+            </a>
+          </li>
+          <li class="view-control-item">
+            <a class="button-view list" href="#">
+              <span class="visually-hidden">Показать список</span>
+            </a>
+          </li>
+        </ul>
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link">
               <img class="hotel-card-image" src="#" alt="Гостиница Amara Resort & Spa">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
-            <p class="hotel-card-type">Гостиница <b class="hotel-card-price">От 4000 ₽</b></p>
-
+            <dl class="hotel-card-type-price">
+              <dt class="hotel-type">Гостиница</dt>
+              <dd class="hotel-price">От 4000 ₽</dd>
+            </dl>
             <a class="hotel-card-detail" href="#">подробнее</a>
             <button class="hotel-card-favorites">в избранное</button>
-            <p class="hotel-rating-stars">
-              <span class="star">*</span>
-              <span class="star">*</span>
-              <span class="star">*</span>
-              <span class="star">*</span>
-            </p>
+            <span class="hotel-rating-stars">Рейтинг в звездах (4 звезды)</span>
             <p class="hotel-card-rating">Рейтинг: 8,5</p>
           </li>
           <li class="hotel-card">
@@ -152,15 +158,13 @@
               <img class="hotel-card-image" src="#" alt="Гостиница Villas at Poco Diablo">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
-            <p class="hotel-card-type">Гостиница <b class="hotel-card-price">От 5000 ₽</b></p>
+            <dl class="hotel-card-type-price">
+              <dt class="hotel-type">Гостиница</dt>
+              <dd class="hotel-price">От 5000 ₽</dd>
+            </dl>
             <a class="hotel-card-detail" href="#">подробнее</a>
             <button class="hotel-card-favorites-add">в избранном</button>
-            <p class="hotel-rating-stars">
-              <span class="star">*</span>
-              <span class="star">*</span>
-              <span class="star">*</span>
-              <span class="star">*</span>
-            </p>
+            <span class="hotel-rating-stars">Рейтинг в звездах (4 звезды)</span>
             <p class="hotel-card-rating">Рейтинг: 9,2</p>
           </li>
           <li class="hotel-card">
@@ -168,14 +172,13 @@
               <img class="hotel-card-image" src="#" alt="Гостиница Desert Quail Inn">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
-            <p class="hotel-card-type">Гостиница <b class="hotel-card-price">От 2500 ₽</b></p>
+            <dl class="hotel-card-type-price">
+              <dt class="hotel-type">Гостиница</dt>
+              <dd class="hotel-price">От 2500 ₽</dd>
+            </dl>
             <a class="hotel-card-detail" href="#">подробнее</a>
             <button class="hotel-card-favorites">в избранное</button>
-            <p class="hotel-rating-stars">
-              <span class="star">*</span>
-              <span class="star">*</span>
-              <span class="star">*</span>
-            </p>
+            <span class="hotel-rating-stars">Рейтинг в звездах (3 звезды)</span>
             <p class="hotel-card-rating">Рейтинг: 6,9</p>
           </li>
           <li class="hotel-card">
@@ -183,13 +186,13 @@
               <img class="hotel-card-image" src="#" alt="Гостиница GreenTree Inn">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
-            <p class="hotel-card-type">Гостиница <b class="hotel-card-price">От 1500 ₽</b></p>
+            <dl class="hotel-card-type-price">
+              <dt class="hotel-type">Гостиница</dt>
+              <dd class="hotel-price">От 1500 ₽</dd>
+            </dl>
             <a class="hotel-card-detail" href="#">подробнее</a>
             <button class="hotel-card-favorites">в избранное</button>
-            <p class="hotel-rating-stars">
-              <span class="star">*</span>
-              <span class="star">*</span>
-            </p>
+            <span class="hotel-rating-stars">Рейтинг в звездах (2 звезды)</span>
             <p class="hotel-card-rating">Рейтинг: 5,0</p>
           </li>
         </ul>
