--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Главная</a>
+            <a class="navigation-link current" href="#">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
@@ -32,6 +32,7 @@
               <span class="visually-hidden">Избранное</span>
             </a>
             <span class="favorites-amount">12</span>
+            <span class="visually-hidden">гостиниц в избранном</span>
           </li>
           <li class="navigation-item">
             <a class="navigation-link button-link" href="#">Хочу сюда!</a>
@@ -45,10 +46,10 @@
         <h2 class="visually-hidden">О Седоне</h2>
         <img src="#" alt="Welcome to the gorgeous Sedona">
         <p>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-main-list">
           <li class="advantages-main-item">
             <h3>Настоящий<br>городок</h3>
