--- a/catalog.html
+++ b/catalog.html
@@ -120,6 +120,8 @@
         <p class="search-result">Найдено гостиниц: 38</p>
         <select class="select-control-sort" aria-label="Сортировка">
           <option value="cheap">Сначала дешёвые</option>
+          <option value="expensive">Сначала дорогие</option>
+          <option value="rating">По количеству звёзд</option>
         </select>
         <ul class="view-control-list">
           <li class="view-control-item">
@@ -219,6 +221,8 @@
         <label for="control-amount-card">Гостиниц на странице:</label>
         <select id="control-amount-card" aria-label="Количество карточек на странице">
           <option value="4">4</option>
+          <option value="8">8</option>
+          <option value="16">16</option>
         </select>
       </section>
       <section class="subscription-form">
