--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+
+    <!--Шапка-->
     <header class="page-header">
       <nav class="navigation">
+
+        <!--Логотип-->
         <a class="navigation-logo">
           <img class="page-header-logo" src="#" alt="Логотип Город Седона">
         </a>
+
+        <!--Основная навигация-->
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link current" href="#">Главная</a>
@@ -21,6 +27,8 @@
             <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
+
+        <!--Меню пользователя-->
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
@@ -40,13 +48,21 @@
         </ul>
       </nav>
     </header>
+
+    <!--Основное содержание-->
     <main class="main-index">
+
+      <!--Главный заголовок-->
       <h1 class="visually-hidden">Добро пожаловать в город Седона</h1>
+
+      <!--Промо-->
       <section class="promo">
         <h2 class="visually-hidden">О Седоне</h2>
         <img src="#" alt="Welcome to the gorgeous Sedona">
         <p>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
       </section>
+
+      <!--Преимущества-->
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -94,11 +110,15 @@
           </li>
         </ol>
       </section>
+
+      <!--Поиск гостиниц-->
       <section class="hotel-search">
         <h2>Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="search-link button-link" href="catalog.html">ПОИСК ГОСТИНИЦЫ В седоне</a>
       </section>
+
+      <!--Форма подписки-->
       <section class="subscription-form">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -109,6 +129,8 @@
         </form>
       </section>
     </main>
+
+    <!--Подвал-->
     <footer class="page-footer">
       <ul class="social-list">
         <li class="social-item">
