В разметку добавлены изображения, небольшие правки

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
 
         <!--Логотип-->
         <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" src="#" alt="Логотип Город Седона">
+          <img class="page-header-logo" src="images/logo.svg" width="139" height="70" alt="Логотип Город Седона">
         </a>
 
         <!--Основная навигация-->
@@ -24,7 +24,7 @@
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Гостиницы</a>
+            <a class="navigation-link current" href="#">Гостиницы</a>
           </li>
         </ul>
 
@@ -37,10 +37,10 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Избранное</span>
+              <span class="visually-hidden">В избранное добавлено</span>
+              <span>12</span>
+              <span class="visually-hidden">гостиниц</span>
             </a>
-            <span class="favorites-amount">12</span>
-            <span class="visually-hidden">гостиниц в избранном</span>
           </li>
           <li class="navigation-item">
             <a class="navigation-link button-link" href="#">Хочу сюда!</a>
@@ -165,8 +165,8 @@
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link">
-              <img class="hotel-card-image" src="#" alt="Гостиница Amara Resort & Spa">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+              <img class="hotel-card-image" src="images/catalog/amara-resort-spa.jpeg" width="300" height="211" alt="Гостиница Amara Resort & Spa">
             </a>
             <dl class="hotel-card-type-price">
               <dt class="hotel-type">Гостиница</dt>
@@ -179,8 +179,8 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link">
-              <img class="hotel-card-image" src="#" alt="Гостиница Villas at Poco Diablo">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+              <img class="hotel-card-image" src="images/catalog/villas-at-poco-diablo.jpeg" width="300" height="211" alt="Гостиница Villas at Poco Diablo">
             </a>
             <dl class="hotel-card-type-price">
               <dt class="hotel-type">Гостиница</dt>
@@ -193,8 +193,8 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link">
-              <img class="hotel-card-image" src="#" alt="Гостиница Desert Quail Inn">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
+              <img class="hotel-card-image" src="images/catalog/desert-quail-inn.jpeg" width="300" height="211" alt="Гостиница Desert Quail Inn">
             </a>
             <dl class="hotel-card-type-price">
               <dt class="hotel-type">Гостиница</dt>
@@ -207,8 +207,8 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link">
-              <img class="hotel-card-image" src="#" alt="Гостиница GreenTree Inn">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
+              <img class="hotel-card-image" src="images/catalog/greentree-inn.jpeg" width="300" height="211" alt="Гостиница GreenTree Inn">
             </a>
             <dl class="hotel-card-type-price">
               <dt class="hotel-type">Гостиница</dt>
