--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <!--Логотип-->
         <a class="navigation-logo">
-          <img class="page-header-logo" src="#" alt="Логотип Город Седона">
+          <img class="page-header-logo" src="images/logo.svg" width="139" height="70" alt="Логотип Город Седона">
         </a>
 
         <!--Основная навигация-->
@@ -37,10 +37,10 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Избранное</span>
+              <span class="visually-hidden">В избранное добавлено</span>
+              <span>12</span>
+              <span class="visually-hidden">гостиниц</span>
             </a>
-            <span class="favorites-amount">12</span>
-            <span class="visually-hidden">гостиниц в избранном</span>
           </li>
           <li class="navigation-item">
             <a class="navigation-link button-link" href="#">Хочу сюда!</a>
@@ -57,21 +57,21 @@
 
       <!--Промо-->
       <section class="promo">
-        <h2 class="visually-hidden">О Седоне</h2>
-        <img src="#" alt="Welcome to the gorgeous Sedona">
+        <h2 class="visually-hidden">О городе Седона</h2>
+        <img src="images/promo.jpeg" width="1200" height="485" alt="Welcome to the gorgeous Sedona">
         <p>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
       </section>
 
       <!--Преимущества-->
       <section class="advantages">
-        <h2 class="visually-hidden">Преимущества Седоны</h2>
+        <h2 class="visually-hidden">Преимущества города Седона</h2>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-main-list">
           <li class="advantages-main-item">
             <h3>Настоящий<br>городок</h3>
             <p>— №1 —</p>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="#" alt="Улица в Седоне">
+            <img src="images/advantage-1.jpeg" width="800" height="384" alt="Улица в Седоне">
               <ul class="advantages-sub-list">
                 <li class="advantages-sub-item">
                   <h4>Жильё</h4>
@@ -88,7 +88,7 @@
               </ul>
           </li>
           <li class="advantages-main-item">
-            <img src="#" alt="Каньон в Седоне">
+            <img src="images/advantage-2.jpeg" width="800" height="384" alt="Каньон в Седоне">
             <h3>Там есть <br>мост дьявола</h3>
             <p>— №2 —</p>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
