--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main class="main-index">
 
       <!--Главный заголовок-->
-      <h1 class="visually-hidden">Добро пожаловать в город Седона</h1>
+      <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
 
       <!--Промо-->
       <section class="promo">
