--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!--Промо-->
       <section class="promo">
         <h2 class="visually-hidden">О городе Седона</h2>
-        <img src="images/promo.jpeg" width="1200" height="485" alt="Welcome to the gorgeous Sedona">
+        <img src="images/promo-welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
         <p>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
       </section>
 
@@ -88,10 +88,10 @@
               </ul>
           </li>
           <li class="advantages-main-item">
-            <img src="images/advantage-2.jpeg" width="800" height="384" alt="Каньон в Седоне">
             <h3>Там есть <br>мост дьявола</h3>
             <p>— №2 —</p>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img src="images/advantage-2.jpeg" width="800" height="384" alt="Каньон в Седоне">
           </li>
           <li class="advantages-main-item">
             <h3>Небольшая<br>площадь</h3>
