--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link current" href="#">Гостиницы</a>
+            <a class="navigation-link current-site-page">Гостиницы</a>
           </li>
         </ul>
 
@@ -224,7 +224,7 @@
         <!--Пагинация-->
         <ul class="pagination">
           <li class="pagination-item">
-            <a class="pagination-link" href="#">1</a>
+            <a class="pagination-link current-catalog-page" href="#">1</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">2</a>
