--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--Основная навигация-->
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link current" href="#">Главная</a>
+            <a class="navigation-link current-site-page">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
