--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">В избранное добавлено</span>
+              <span class="visually-hidden">Избранное содержит</span>
               <span>12</span>
               <span class="visually-hidden">гостиниц</span>
             </a>
