Подключены стили, изменено изображение промо блока

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link href="styles/styles.css" rel="stylesheet">
+
     <title>HTML Academy: Седона</title>
   </head>
   <body>
@@ -58,7 +60,7 @@
       <!--Промо-->
       <section class="promo">
         <h2 class="visually-hidden">О городе Седона</h2>
-        <img src="images/promo-welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
+        <img src="images/promo.jpg" width="1200" height="485" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
         <p>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
       </section>
 
