--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link href="styles/styles.css" rel="stylesheet">
+
     <title>HTML Academy: Седона</title>
   </head>
   <body>
