Добавлены ссылки на соцсети, подключены шрифты

--- a/catalog.html
+++ b/catalog.html
@@ -270,18 +270,18 @@
     <footer class="page-footer">
       <ul class="social-list">
         <li class="social-item">
-          <a href="#">
-            <span class="visually-hidden vkontakte">Вконтакте</span>
+          <a href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
         <li class="social-item">
-          <a href="#">
-            <span class="visually-hidden telegram">Telegram</span>
+          <a href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Telegram</span>
           </a>
         </li>
         <li class="social-item">
-          <a href="#">
-            <span class="visually-hidden youtube">YouTube</span>
+          <a href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">YouTube</span>
           </a>
         </li>
       </ul>
