--- a/index.html
+++ b/index.html
@@ -136,17 +136,17 @@
     <footer class="page-footer">
       <ul class="social-list">
         <li class="social-item">
-          <a href="#">
+          <a href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
         <li class="social-item">
-          <a href="#">
+          <a href="https://t.me/htmlacademy">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
         <li class="social-item">
-          <a href="#">
+          <a href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">YouTube</span>
           </a>
         </li>
