--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   </head>
   <body>
 
-    <!--Шапка-->
+    <!--ШАПКА-->
     <header class="page-header">
       <nav class="navigation">
 
-        <!--Логотип-->
+        <!--ЛОГОТИП-->
         <a class="navigation-logo">
           <img class="page-header-logo" src="images/logo.svg" width="139" height="70" alt="Логотип Город Седона">
         </a>
 
-        <!--Основная навигация-->
+        <!--ОСНОВНАЯ НАВИГАЦИЯ-->
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link current-site-page">Главная</a>
@@ -30,7 +30,7 @@
           </li>
         </ul>
 
-        <!--Меню пользователя-->
+        <!--МЕНЮ ПОЛЬЗОВАТЕЛЯ-->
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
@@ -45,37 +45,37 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link button-link" href="#">Хочу сюда!</a>
+            <a class="navigation-link button-link here" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
     </header>
 
-    <!--Основное содержание-->
+    <!--ОСНОВНОЕ СОДЕРЖАНИЕ-->
     <main class="main-index">
 
-      <!--Главный заголовок-->
+      <!--ГЛАВНЫЙ ЗАГОЛОВОК-->
       <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
 
-      <!--Промо-->
+      <!--ПРОМО-->
       <section class="promo">
         <h2 class="visually-hidden">О городе Седона</h2>
         <img src="images/promo.jpg" width="1200" height="485" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
         <p>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
       </section>
 
-      <!--Преимущества-->
+      <!--ПРЕИМУЩЕСТВА-->
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества города Седона</h2>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-main-list">
-          <li class="advantages-main-item">
+          <li class="advantages-main-item blue-block">
             <h3>Настоящий<br>городок</h3>
             <p>— №1 —</p>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <img src="images/advantage-1.jpeg" width="800" height="384" alt="Улица в Седоне">
               <ul class="advantages-sub-list">
-                <li class="advantages-sub-item">
+                <li class="advantages-sub-item white-blue-block">
                   <h4>Жильё</h4>
                   <p>Рекомендуем пожить<br>в настоящем мотеле, всё как в кино!</p>
                 </li>
@@ -83,29 +83,29 @@
                   <h4>Еда</h4>
                   <p>Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
                 </li>
-                <li class="advantages-sub-item">
+                <li class="advantages-sub-item white-blue-block">
                   <h4>Сувениры</h4>
                   <p>Не только китайского,<br>но и настоящего местного производства!</p>
                 </li>
               </ul>
           </li>
-          <li class="advantages-main-item">
+          <li class="advantages-main-item blue-block">
             <h3>Там есть <br>мост дьявола</h3>
             <p>— №2 —</p>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             <img src="images/advantage-2.jpeg" width="800" height="384" alt="Каньон в Седоне">
           </li>
-          <li class="advantages-main-item">
+          <li class="advantages-main-item white-blue-block">
             <h3>Небольшая<br>площадь</h3>
             <p>— №3 —</p>
             <p>Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-main-item">
+          <li class="advantages-main-item grey-blue-block">
             <h3>Красивая<br>дорога</h3>
             <p>— №4 —</p>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-main-item">
+          <li class="advantages-main-item white-blue-block">
             <h3>Мало<br>туристов</h3>
             <p>— №5 —</p>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
@@ -113,26 +113,26 @@
         </ol>
       </section>
 
-      <!--Поиск гостиниц-->
+      <!--ПОИСК ГОСТИНИЦ-->
       <section class="hotel-search">
         <h2>Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="search-link button-link" href="catalog.html">ПОИСК ГОСТИНИЦЫ В седоне</a>
+        <a class="button-link search" href="catalog.html">Поиск гостиницы в Седоне</a>
       </section>
 
-      <!--Форма подписки-->
+      <!--ФОРМА ПОДПИСКИ-->
       <section class="subscription-form">
         <h2>Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
         <form action="https://echo.htmlacademy.ru/" method="get">
           <label for="subscription-form-email" class="visually-hidden">Введите Ваш e-mail</label>
           <input type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
-          <button type="submit">Подписаться</button>
+          <button class="subscribe" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
 
-    <!--Подвал-->
+    <!--ПОДВАЛ-->
     <footer class="page-footer">
       <ul class="social-list">
         <li class="social-item">
@@ -151,8 +151,12 @@
           </a>
         </li>
       </ul>
-      <a href="tel:88128121212">+7 (812) 812-12-12</a>
-      <a href="#">Сайт HTML Academy</a>
+      <a href="tel:88128121212">
+        <span class="phone">+7 (812) 812-12-12</span>
+      </a>
+      <a href="#">
+        <span class="visually-hidden">Сайт HTML Academy</span>
+      </a>
     </footer>
   </body>
 </html>
